# hangman

./: .editorconfig  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yaml
github/workflow/: tests.yaml
src/_hangman/: runner.py
src/hangman/: __init__.py  _lax_enum.py  _static_reader.py  canvas.py  choice_list.py  conversation.py  game.py  word.py  word_list.py
src/hangman/assets/: gallows.txt  head.txt  instructions.txt  left_arm.txt  left_leg.txt  right_arm.txt  right_leg.txt  title.txt  trunk.txt  you_lost.txt
src/hangman/words/: hard.txt  medium.txt  unix.txt
tests/: test_canvas.py  test_choice_list.py  test_word_list.py
tests/assets/: merged.txt
